homepage first 2 containers

--- a/index.html
+++ b/index.html
@@ -1,18 +1,182 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="static/x-icon" href="/static/favicon.ico">
+    <!-- <link rel="icon" type="static/x-icon" href="/static/favicon.ico"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>medFinance </title>
-    <link rel="stylesheet" href="./static/main.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./static/main.css" />
 </head>
+
 <body>
-    
+
+    <!-- Navbar -->
+
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <!-- Container wrapper -->
+        <div class="container-fluid">
+            <!-- Navbar brand -->
+            <a class="navbar-brand" href="#">Brand</a>
+
+            <!-- Left links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Startseite</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Betriebliche Altersversorgung</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Finanberatung für Ärzte und Apotheker</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Vermögensmanagement</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Finanzierung</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Versicherungen</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Kontakt</a>
+                </li>
+            </ul>
+            <!-- Left links -->
+        </div>
+        </div>
+        <!-- Container wrapper -->
+    </nav>
+    <!-- Navbar -->
+
+    <span class="anchor" id="Startseite"></span>
+    <div class="container-fluid start-d">
+        <div class="row">
+            <div class="col-5 start-content-d">
+                <div class="start-text-d">
+                    <h3>Bauen Sie Ihr Vermögen auf und erhalten Sie kompetente Beratung!</h3>
+                    <p> Bei uns erhalten Sie eine exzellente Beratung beim Aufbau und der Verwaltung Ihres Vermögens.
+                        Wir kümmern uns um Ihre finanziellen Ziele und helfen Ihnen, aus Ihrem Geld das Beste zu machen.
+                    </p>
+
+                    <p>Nutzen Sie jetzt unser Kontaktformular und vereinbaren Sie ein Beratungsgespräch – Zögern Sie
+                        nicht!</p>
+
+                </div>
+            </div>
+        </div>
+        <div class="row curved">
+            <div class="col-12">
+                <svg class="curved-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#98C00A" fill-opacity="1"
+                        d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,229.3C840,256,960,256,1080,218.7C1200,181,1320,107,1380,69.3L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+                    </path>
+                </svg>
+                <svg class="curved-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#610556" fill-opacity="1"
+                        d="M0,160L40,160C80,160,160,160,240,181.3C320,203,400,245,480,266.7C560,288,640,288,720,288C800,288,880,288,960,272C1040,256,1120,224,1200,186.7C1280,149,1360,107,1400,85.3L1440,64L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+                    </path>
+                </svg>
+                <svg class="curved-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#F5F3EE" fill-opacity="1"
+                        d="M0,160L60,181.3C120,203,240,245,360,272C480,299,600,309,720,298.7C840,288,960,256,1080,224C1200,192,1320,160,1380,144L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+                    </path>
+                </svg>
+            </div>
+        </div>
+    </div>
+    <div class="container-flow bg-beige py-5">
+        <div class="row py-5">
+            <div class="col-12 text-center">
+                <h3 style="color:#98C00A ">„Eine Investition in Wissen bringt immer noch die besten Zinsen“</h3>
+                <h4 style="font-style: italic;">Benjamin Franklin</h4>
+            </div>
+        </div>
+        <div class="row py-5 justify-content-center">
+            <div class="col-2 card-link mx-2 py-5">
+                <img src="/static/icons/Icon_BA.png" alt="icon">
+                <h4 class="mt-4">Betriebliche Altersversorgung</h4>
+            </div>
+            <div class="col-2 card-link mx-2 py-5">
+                <img src="/static/icons/Icon_BA.png" alt="icon">
+                <h4 class="mt-4">Finanzberatung für Ärzte Apotheker</h4>
+            </div>
+            <div class="col-2 card-link mx-2 py-5">
+                <img src="/static/icons/Icon_BA.png" alt="icon">
+                <h4 class="mt-4">Vermögens- <br> management</h4>
+            </div>
+
+            <div class="col-2 card-link mx-2 py-5">
+                <img src="/static/icons/Icon_BA.png" alt="icon">
+                <h4 class="mt-4">Finanzierung</h4>
+            </div>
+            <div class="col-2 card-link mx-2 py-5">
+                <img src="/static/icons/Icon_BA.png" alt="icon">
+                <h4 class="mt-4">Versicherungen</h4>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container-flow pic-component">
+        <div class="row">
+            <div class="col-6 px-0">
+                <div class="svg-pic-div">
+
+                    <svg class="svg-pic-1" viewBox="60 20 300 300" xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none">
+                        <path fill="#610550"
+                            d="M 56.901 56.848 L 57.194 278.648 L 264.574 216.571 C 264.544 208.319 264.304 107.649 264.763 120.715 L 56.901 56.848 Z" />
+                    </svg>
+                    <svg class="svg-pic-2" height='2000' viewBox="-5 -40 24 300" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="30" cy="30" r="30" fill="#73065F" />
+                    </svg>
+                    <div class="svg-pic-3">
+                        <img class="" src="static/template-img.jpeg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 align-items-center">
+                <h3> Text</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quae, ullam, eius natus facilis
+                    omnis culpa est officia iusto cum recusandae doloremque, commodi iste obcaecati facere pariatur hic
+                    officiis fuga.</p>
+            </div>
+        </div>
+    </div>
 </body>
+
+<!-- Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function () {
+        $(window).on('scroll', function () {
+            var $nav = $('.navbar');
+            var scrollTop = $(this).scrollTop();
+
+            if (scrollTop > 0) {
+                $nav.addClass('navbar-solid');
+            } else {
+                $nav.removeClass('navbar-solid');
+            }
+        });
+    });
+</script>
+
+<!-- Bootstrap JS  -->
+
 </html>
