--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                 <h4 style="font-style: italic;">Benjamin Franklin</h4>
             </div>
         </div>
-        <div class="row py-5 justify-content-center">
+        <div class="row py-5 justify-content-center text-center">
+            <h3 class="py-5">Was interessiert Sie?</h3>
             <div class="col-2 card-link mx-2 py-5">
                 <img src="/static/icons/Icon_BA.png" alt="icon">
                 <h4 class="mt-4">Betriebliche Altersversorgung</h4>
@@ -124,32 +125,86 @@
     </div>
 
     <div class="container-flow pic-component">
-        <div class="row">
-            <div class="col-6 px-0">
-                <div class="svg-pic-div">
-
-                    <svg class="svg-pic-1" viewBox="60 20 300 300" xmlns="http://www.w3.org/2000/svg"
-                        preserveAspectRatio="none">
-                        <path fill="#610550"
-                            d="M 56.901 56.848 L 57.194 278.648 L 264.574 216.571 C 264.544 208.319 264.304 107.649 264.763 120.715 L 56.901 56.848 Z" />
-                    </svg>
-                    <svg class="svg-pic-2" height='2000' viewBox="-5 -40 24 300" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="30" cy="30" r="30" fill="#73065F" />
-                    </svg>
-                    <div class="svg-pic-3">
-                        <img class="" src="static/template-img.jpeg" alt="">
-                    </div>
+        <div class="row h-100">
+            <div class="col-7 h-100 ml-0 px-0 png-pic-cont">
+                <div class="png-design">
+                    <img class src="/static/design_comp.png" alt="png-design">
+                </div>
+                <div class="design-pic">
+                    <img src="/static/template-img.jpeg" alt="">
                 </div>
             </div>
 
-            <div class="col-6 align-items-center">
-                <h3> Text</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quae, ullam, eius natus facilis
-                    omnis culpa est officia iusto cum recusandae doloremque, commodi iste obcaecati facere pariatur hic
-                    officiis fuga.</p>
+            <div class="col-4 d-flex align-items-center">
+                <div class="png-pic-text-cont">
+                    <h3> Betriebliche <br> Altersversorgung</h3>
+
+                    <p class="p-text my-3">
+                        Durch das sinkende Rentenniveau in der gesetzlichen Rentenversicherung hat die
+                        Betriebliche
+                        Altersversorgung (bAV) für die Alterssicherung von Arbeitnehmern erheblich an Bedeutung
+                        gewonnen.
+                        <br>
+                        <br>
+                        Betriebliche Altersversorgung Bezeichnet Leistungen Der Alters-, Invaliditäts- Und/Oder
+                        Hinterbliebenenversorgung, Die Arbeitnehmern Aus Anlass Des Arbeitsverhältnisses Von Ihrem
+                        Arbeitgeber Zugesagt Werden.
+                    </p>
+                    <button class="btn btn-danger" style="background-color:#610556;">Mehr erfahren
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                        </svg></button>
+
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="container-flow bg-beige py-5">
+        <div class="row text-center justify-content-center py-4">
+            <div class="col-8">
+                <h3 class="py-5">Wir bieten ihnen Finanzberatung für Ärzte <br> Apotheker und Heilpraktiker an</h3>
+                <p class='p-text'>Qualifizierte Finanzberatung für Ärzte, Zahnärzte und Apotheker. <br> Wir beraten und
+                    begleiten seit 1999
+                    Human Ärzte, Zahnärzte und Apotheker
+                    <br> in allen Finanzfragen für Anspruchsvolle Kunden.
+                </p>
+            </div>
+        </div>
+        <div class="row justify-content-center text-center py-4">
+            <div class="col-2 card-link-2 mx-2">
+                <div class="my-3 mx-4">
+                    <img src="/static/template-img.jpeg" alt="icon">
+                </div>
+                <h4 class="mt-3">Existenzgründung</h4>
+            </div>
+            <div class="col-2 card-link-2 mx-4">
+                <div class="my-3 mx-4">
+                    <img src="/static/template-img.jpeg" alt="icon">
+                </div>
+                <h4 class="mt-3">Praxisfinanzierung</h4>
+            </div>
+            <div class="col-2 card-link-2 mx-4">
+                <div class="my-3 mx-4">
+                    <img src="/static/template-img.jpeg" alt="icon">
+                </div>
+                <h4 class="mt-3">Praxisversicherung</h4>
+            </div>
+            <div class="col-2 card-link-2 mx-4">
+                <div class="my-3 mx-4">
+                    <img src="/static/template-img.jpeg" alt="icon">
+                </div>
+                <h4 class="mt-3">Praxisübernahme <br> und Verkauf</h4>
+            </div>
+        </div>
+    </div>
+    </div>
+
+
+
+
 </body>
 
 <!-- Bootstrap JS -->
