--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="row h-100">
             <div class="col-7 h-100 ml-0 px-0 png-pic-cont">
                 <div class="png-design">
-                    <img class src="/static/design_comp.png" alt="png-design">
+                    <img class src="/static/design_comp-purple.png" alt="png-design">
                 </div>
                 <div class="design-pic">
                     <img src="/static/template-img.jpeg" alt="">
