Seiteninhalte, nebenseiten design

--- a/index.html
+++ b/index.html
@@ -21,30 +21,31 @@
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand px-5" href="#">Brand</a>
 
             <!-- Left links -->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Startseite</a>
+            <ul class="navbar-nav pe-5 mb-2 mb-lg-0">
+                <li class="nav-item px-2">
+                    <a class="nav-link active" aria-current="page" href="/index.html">Startseite</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Betriebliche Altersversorgung</a>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="/betr_alt.html">Betriebliche <br> Altersversorgung</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Finanberatung für Ärzte und Apotheker</a>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="/aerzte_apotheker.html">Finanzberatung für <br>Ärzte und Apotheker</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Vermögensmanagement</a>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="/verm_management.html">Vermögensmanagement</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Finanzierung</a>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="/finanzierung.html">Finanzierung</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Versicherungen</a>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="/versicherung.html">Versicherungen</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Kontakt</a>
+                <li class="nav-item px-2">
+                    <!-- <a class="nav-link" href="#">Kontakt</a> -->
+                    <a class="nav-link px-4 nav-btn">Kontakt</a>
                 </li>
             </ul>
             <!-- Left links -->
@@ -126,7 +127,7 @@
 
     <div class="container-flow pic-component">
         <div class="row h-100">
-            <div class="col-7 h-100 ml-0 px-0 png-pic-cont">
+            <div class="col-sm-6 png-pic-cont">
                 <div class="png-design">
                     <img class src="/static/design_comp-purple.png" alt="png-design">
                 </div>
@@ -135,7 +136,7 @@
                 </div>
             </div>
 
-            <div class="col-4 d-flex align-items-center">
+            <div class="col-sm-5 d-flex align-items-center">
                 <div class="png-pic-text-cont">
                     <h3> Betriebliche <br> Altersversorgung</h3>
 
@@ -150,7 +151,7 @@
                         Hinterbliebenenversorgung, Die Arbeitnehmern Aus Anlass Des Arbeitsverhältnisses Von Ihrem
                         Arbeitgeber Zugesagt Werden.
                     </p>
-                    <button class="btn btn-danger" style="background-color:#610556;">Mehr erfahren
+                    <button class="btn" style="background-color:#610556; color: white">Mehr erfahren
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
@@ -200,8 +201,195 @@
             </div>
         </div>
     </div>
+
+
+    <div class="container-flow pic-component">
+        <div class="row h-100">
+            <div class="col-1"></div>
+            <div class="col-sm-5 d-flex align-items-center">
+                <div class="png-pic-text-cont">
+                    <h3> Betriebliche <br> Altersversorgung</h3>
+
+                    <p class="p-text my-3">
+                        Durch das sinkende Rentenniveau in der gesetzlichen Rentenversicherung hat die
+                        Betriebliche
+                        Altersversorgung (bAV) für die Alterssicherung von Arbeitnehmern erheblich an Bedeutung
+                        gewonnen.
+                        <br>
+                        <br>
+                        Betriebliche Altersversorgung Bezeichnet Leistungen Der Alters-, Invaliditäts- Und/Oder
+                        Hinterbliebenenversorgung, Die Arbeitnehmern Aus Anlass Des Arbeitsverhältnisses Von Ihrem
+                        Arbeitgeber Zugesagt Werden.
+                    </p>
+                    <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                        </svg></button>
+
+                </div>
+            </div>
+            <div class="col-sm-6 png-pic-cont">
+                <div class="png-design-right">
+                    <img class src="/static/design-comp-green.png" alt="png-design">
+                </div>
+                <div class="design-pic-right">
+                    <img src="/static/template-img.jpeg" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 
+    <div class="container-flow pic-component bg-beige">
+        <div class="row h-100">
+            <div class="col-sm-6 png-pic-cont">
+                <div class="png-design">
+                    <img class src="/static/design_comp-purple.png" alt="png-design">
+                </div>
+                <div class="design-pic">
+                    <img src="/static/template-img.jpeg" alt="">
+                </div>
+            </div>
+
+            <div class="col-sm-5 d-flex align-items-center">
+                <div class="png-pic-text-cont">
+                    <h3> Finanzierung</h3>
+
+                    <p class="p-text my-3">
+                        Flexibel und unabhängig können wir auf ein breites Netzwerk mit verlässlichen
+                        Finanzierungspartnern zurückgreifen und in Ihrem Interesse stets die ideale Lösung finden.
+                        <br>
+                        <br>
+                        Bei uns finden Sie keine Standardlösungen für die Finanzierung Ihres Immobilienvorhabens. Egal
+                        ob als Wohnbaufinanzierung oder Existenzgründung. Gemeinsam mit Ihnen entwickeln wir das
+                        passende Finanzierungskonzept für Ihr Vorhaben.
+                    </p>
+                    <button class="btn" style="background-color:#610556; color: white">Mehr erfahren
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                        </svg></button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-flow pic-component">
+        <div class="row h-100">
+            <div class="col-1"></div>
+            <div class="col-sm-5 d-flex align-items-center">
+                <div class="png-pic-text-cont">
+                    <h3> Versicherungen</h3>
+
+                    <p class="p-text my-3">
+                        Wir beraten Sie individuell und auf Ihre Bedürfnisse zu geschnitten. Je nach Zielgruppe und
+                        Ansprüchen suchen wir Ihnen die geeigneteste Versicherungslösung aus.
+                    </p>
+                    <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                        </svg></button>
+
+                </div>
+            </div>
+            <div class="col-sm-6 png-pic-cont">
+                <div class="png-design-right">
+                    <img class src="/static/design-comp-green.png" alt="png-design">
+                </div>
+                <div class="design-pic-right">
+                    <img src="/static/template-img.jpeg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="text-white text-center text-lg-start">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-md-6">
+                    <div class="icon-footer-div py-5">
+                        <img src="/static/icons/Icon_Ärzte.png" alt="">
+                        <div class="social-links d-flex">
+                            <div class="facebook mx-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="10.252" height="21.999"
+                                    viewBox="0 0 10.252 21.999">
+                                    <g id="facebook-logo_1_" data-name="facebook-logo (1)"
+                                        transform="translate(-125.619)">
+                                        <path id="Pfad_63" data-name="Pfad 63"
+                                            d="M132.441,7.208v-1.9a4.176,4.176,0,0,1,.04-.661,1.283,1.283,0,0,1,.18-.461.736.736,0,0,1,.454-.314,3.231,3.231,0,0,1,.835-.087h1.9V0h-3.03a4.932,4.932,0,0,0-3.778,1.248,5.257,5.257,0,0,0-1.148,3.678V7.208h-2.27V11h2.269V22h4.552V11h3.03l.4-3.791Z"
+                                            transform="translate(0)" fill="#fff" />
+                                    </g>
+                                </svg>
+                            </div>
+                            <div class="linkedin mx-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16.968" height="17.199"
+                                    viewBox="0 0 16.968 17.199">
+                                    <g id="linkedin-logo_1_" data-name="linkedin-logo (1)"
+                                        transform="translate(0 -9.558)">
+                                        <path id="LinkedIn"
+                                            d="M16.968,20.1v6.654H13.331V20.548c0-1.56-.526-2.624-1.842-2.624a2.006,2.006,0,0,0-1.866,1.411,2.789,2.789,0,0,0-.121.941v6.481H5.864s.049-10.515,0-11.6H9.5V16.8c-.007.012-.017.026-.024.037H9.5V16.8a3.586,3.586,0,0,1,3.278-1.918C15.173,14.879,16.968,16.538,16.968,20.1ZM2.059,9.558a1.949,1.949,0,0,0-2.059,2,1.938,1.938,0,0,0,2.01,2.006h.024a1.95,1.95,0,0,0,2.058-2.006A1.942,1.942,0,0,0,2.059,9.558ZM.216,26.757H3.853v-11.6H.216Z"
+                                            transform="translate(0)" fill="#fff" />
+                                    </g>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="">Rechtliches</h5>
+
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#!" class="text-white">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 4</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="mb-0">Kontaktieren Sie uns</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" class="text-white">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 4</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+            </div>
+            <!--Grid row-->
+        </div>
+        <!-- Grid container -->
 
 
 
