css styling, linking, neue html pages

--- a/verm_management.html
+++ b/verm_management.html
@@ -21,7 +21,9 @@
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand px-5" href="#">Brand</a>
+            <a class="navbar-brand px-5" href="/index.html">
+                <img src="/static/logo_1.png" alt="">
+            </a>
 
             <!-- Left links -->
             <ul class="navbar-nav pe-5 mb-2 mb-lg-0">
@@ -139,13 +141,13 @@
                     </div>
                     <div class="col-4 icon-cont-contact">
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Email.png" alt="">
+                            <img src="/static/icons/Icon_Termin.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
                             <img src="/static/icons/Icon_Email.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Email.png" alt="">
+                            <img src="/static/icons/Icon_Telefon.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -162,6 +164,86 @@
                 vereinbaren</button>
         </div>
     </div>
+
+       <!-- Footer -->
+       <footer class="text-white text-center text-lg-start">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-md-6">
+                    <div class="icon-footer-div py-2">
+                        <img src="/static/logo_2.png" alt="">
+                        <div class="soc">
+                          
+                            <a href="#" class="icon facebook" title="Facebook">
+                              <svg viewBox="0 0 512 512">
+                                <path d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z"/>
+                              </svg><!--[if lt IE 9]><em>Facebook</em><![endif]-->
+                            </a>
+                          
+                            <a href="#" class="icon linkedin" title="LinkedIn">
+                              <svg viewBox="0 0 512 512">
+                                <path d="M186.4 142.4c0 19-15.3 34.5-34.2 34.5 -18.9 0-34.2-15.4-34.2-34.5 0-19 15.3-34.5 34.2-34.5C171.1 107.9 186.4 123.4 186.4 142.4zM181.4 201.3h-57.8V388.1h57.8V201.3zM273.8 201.3h-55.4V388.1h55.4c0 0 0-69.3 0-98 0-26.3 12.1-41.9 35.2-41.9 21.3 0 31.5 15 31.5 41.9 0 26.9 0 98 0 98h57.5c0 0 0-68.2 0-118.3 0-50-28.3-74.2-68-74.2 -39.6 0-56.3 30.9-56.3 30.9v-25.2H273.8z"/>
+                              </svg><!--[if lt IE 9]><em>LinkedIn</em><![endif]-->
+                            </a>                
+                          </div>
+                    </div>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <p style="font-weight: bold;">Rechtliches </p>
+
+                    <ul class="list-unstyled mb-0 footer-list">
+                        <li>
+                            <a href="/rechtlich_html/erstinformation.html" class="text-white link-footer">Erstinformation</a>
+                        </li>
+                        <li>
+                            <a href="/rechtlich_html/impressum.html" class="text-white link-footer">Impressum</a>
+                        </li>
+                        <li>
+                            <a href="/rechtlich_html/datenschutz.html" class="text-white link-footer">Datenschutz</a>
+                        </li>
+                        <li>
+                            <a href="/rechtlich_html/transparenzverordnung.html" class="text-white link-footer">Transparenzverordnung</a>
+                        </li>
+                        <li>
+                            <a href="/rechtlich_html/legal.html" class="text-white link-footer">Legal</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <p style="font-weight: bold;">Kontaktieren Sie uns: </p>
+
+                    <ul class="list-unstyled footer-list">
+                        <li>
+                            Straße
+                        </li>
+                        <li>
+                            69181 Mannheim
+                        </li>
+                        <li>
+                            Daniel Adamovic
+                        </li>
+                        <li>
+                            medFinance
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+            </div>
+            <!--Grid row-->
+        </div>
+        <!-- Grid container -->
+    </footer>
+
+    <!-- Footer -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
