--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand px-5" href="#">Brand</a>
+            <a class="navbar-brand px-5" href="/index.html">
+                <img src="/static/logo_1.png" alt="">
+            </a>
 
             <!-- Left links -->
             <ul class="navbar-nav pe-5 mb-2 mb-lg-0">
@@ -59,7 +61,7 @@
     <div class="container-fluid start-d">
         <div class="row">
             <div class="col-5 start-content-d">
-                <div class="start-text-d">
+                <div class="start-text-d animation">
                     <h3>Bauen Sie Ihr Vermögen auf und erhalten Sie kompetente Beratung!</h3>
                     <p> Bei uns erhalten Sie eine exzellente Beratung beim Aufbau und der Verwaltung Ihres Vermögens.
                         Wir kümmern uns um Ihre finanziellen Ziele und helfen Ihnen, aus Ihrem Geld das Beste zu machen.
@@ -93,34 +95,33 @@
     </div>
     <div class="container-flow bg-beige py-5">
         <div class="row py-5">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center reveal">
                 <h3 style="color:#98C00A ">„Eine Investition in Wissen bringt immer noch die besten Zinsen“</h3>
                 <h4 style="font-style: italic;">Benjamin Franklin</h4>
             </div>
         </div>
-        <div class="row py-5 justify-content-center text-center">
+        <div class="row py-5 justify-content-center text-center reveal">
             <h3 class="py-5">Was interessiert Sie?</h3>
-            <div class="col-2 card-link mx-2 py-5">
+            <a href="betr_alt.html" class="col-2 card-link mx-2 py-5">
                 <img src="/static/icons/Icon_BA.png" alt="icon">
                 <h4 class="mt-4">Betriebliche Altersversorgung</h4>
-            </div>
-            <div class="col-2 card-link mx-2 py-5">
-                <img src="/static/icons/Icon_BA.png" alt="icon">
+            </a>
+            <a href="/aerzte_apotheker.html" class="col-2 card-link mx-2 py-5">
+                <img src="/static/icons/Icon_Ärzte.png" alt="icon">
                 <h4 class="mt-4">Finanzberatung für Ärzte Apotheker</h4>
-            </div>
-            <div class="col-2 card-link mx-2 py-5">
-                <img src="/static/icons/Icon_BA.png" alt="icon">
+            </a>
+            <a href="/verm_management.html" class="col-2 card-link mx-2 py-5">
+                <img src="/static/icons/Icon_Vermögen.png" alt="icon">
                 <h4 class="mt-4">Vermögens- <br> management</h4>
-            </div>
-
-            <div class="col-2 card-link mx-2 py-5">
-                <img src="/static/icons/Icon_BA.png" alt="icon">
+            </a>
+            <a href="/finanzierung.html" class="col-2 card-link mx-2 py-5">
+                <img src="/static/icons/Icon_Finanzen.png" alt="icon">
                 <h4 class="mt-4">Finanzierung</h4>
-            </div>
-            <div class="col-2 card-link mx-2 py-5">
-                <img src="/static/icons/Icon_BA.png" alt="icon">
+            </a>
+            <a href="/versicherung.html" class="col-2 card-link mx-2 py-5">
+                <img src="/static/icons/Icon_Versicherung.png" alt="icon">
                 <h4 class="mt-4">Versicherungen</h4>
-            </div>
+            </a>
 
         </div>
     </div>
@@ -137,7 +138,7 @@
             </div>
 
             <div class="col-sm-5 d-flex align-items-center">
-                <div class="png-pic-text-cont">
+                <div class="png-pic-text-cont reveal">
                     <h3> Betriebliche <br> Altersversorgung</h3>
 
                     <p class="p-text my-3">
@@ -151,12 +152,14 @@
                         Hinterbliebenenversorgung, Die Arbeitnehmern Aus Anlass Des Arbeitsverhältnisses Von Ihrem
                         Arbeitgeber Zugesagt Werden.
                     </p>
-                    <button class="btn" style="background-color:#610556; color: white">Mehr erfahren
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-                        </svg></button>
+                    <a href="/betr_alt.html">
+                        <button class="btn" style="background-color:#610556; color: white">Mehr erfahren
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                            </svg></button>
+                    </a>
 
                 </div>
             </div>
@@ -200,6 +203,16 @@
                 <h4 class="mt-3">Praxisübernahme <br> und Verkauf</h4>
             </div>
         </div>
+        <div class="row justify-content-center text-center">
+            <a href="/betr_alt.html">
+                <button class="btn">Mehr erfahren
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                    </svg></button>
+            </a>
+        </div>
     </div>
 
 
@@ -207,27 +220,22 @@
         <div class="row h-100">
             <div class="col-1"></div>
             <div class="col-sm-5 d-flex align-items-center">
-                <div class="png-pic-text-cont">
-                    <h3> Betriebliche <br> Altersversorgung</h3>
+                <div class="png-pic-text-cont reveal">
+                    <h3> Vermögensmanagement</h3>
 
                     <p class="p-text my-3">
-                        Durch das sinkende Rentenniveau in der gesetzlichen Rentenversicherung hat die
-                        Betriebliche
-                        Altersversorgung (bAV) für die Alterssicherung von Arbeitnehmern erheblich an Bedeutung
-                        gewonnen.
-                        <br>
-                        <br>
-                        Betriebliche Altersversorgung Bezeichnet Leistungen Der Alters-, Invaliditäts- Und/Oder
-                        Hinterbliebenenversorgung, Die Arbeitnehmern Aus Anlass Des Arbeitsverhältnisses Von Ihrem
-                        Arbeitgeber Zugesagt Werden.
+                        Die Möglichkeiten attraktiver Geldanlagen sind vielfältig. Die beste Vermögensanlage verbindet
+                        fundiertes Expertenwissen mit den individuellen Bedürfnissen jener Menschen, die dieses Vermögen
+                        aufgebaut haben.
                     </p>
-                    <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-                        </svg></button>
-
+                    <a href="/verm_management.html">
+                        <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                            </svg></button>
+                    </a>
                 </div>
             </div>
             <div class="col-sm-6 png-pic-cont">
@@ -253,7 +261,7 @@
             </div>
 
             <div class="col-sm-5 d-flex align-items-center">
-                <div class="png-pic-text-cont">
+                <div class="png-pic-text-cont reveal">
                     <h3> Finanzierung</h3>
 
                     <p class="p-text my-3">
@@ -265,12 +273,14 @@
                         ob als Wohnbaufinanzierung oder Existenzgründung. Gemeinsam mit Ihnen entwickeln wir das
                         passende Finanzierungskonzept für Ihr Vorhaben.
                     </p>
-                    <button class="btn" style="background-color:#610556; color: white">Mehr erfahren
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-                        </svg></button>
+                    <a href="/finanzierung.html">
+                        <button class="btn" style="background-color:#610556; color: white">Mehr erfahren
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                            </svg></button></a>
+
 
                 </div>
             </div>
@@ -281,19 +291,20 @@
         <div class="row h-100">
             <div class="col-1"></div>
             <div class="col-sm-5 d-flex align-items-center">
-                <div class="png-pic-text-cont">
+                <div class="png-pic-text-cont reveal">
                     <h3> Versicherungen</h3>
 
                     <p class="p-text my-3">
                         Wir beraten Sie individuell und auf Ihre Bedürfnisse zu geschnitten. Je nach Zielgruppe und
                         Ansprüchen suchen wir Ihnen die geeigneteste Versicherungslösung aus.
                     </p>
+                    <a href="/versicherung.html">
                     <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
                                 d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-                        </svg></button>
+                        </svg></button></a>
 
                 </div>
             </div>
@@ -308,6 +319,8 @@
         </div>
     </div>
 
+
+    <!-- Footer -->
     <footer class="text-white text-center text-lg-start">
         <!-- Grid container -->
         <div class="container p-4">
@@ -315,52 +328,45 @@
             <div class="row">
                 <!--Grid column-->
                 <div class="col-md-6">
-                    <div class="icon-footer-div py-5">
-                        <img src="/static/icons/Icon_Ärzte.png" alt="">
-                        <div class="social-links d-flex">
-                            <div class="facebook mx-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="10.252" height="21.999"
-                                    viewBox="0 0 10.252 21.999">
-                                    <g id="facebook-logo_1_" data-name="facebook-logo (1)"
-                                        transform="translate(-125.619)">
-                                        <path id="Pfad_63" data-name="Pfad 63"
-                                            d="M132.441,7.208v-1.9a4.176,4.176,0,0,1,.04-.661,1.283,1.283,0,0,1,.18-.461.736.736,0,0,1,.454-.314,3.231,3.231,0,0,1,.835-.087h1.9V0h-3.03a4.932,4.932,0,0,0-3.778,1.248,5.257,5.257,0,0,0-1.148,3.678V7.208h-2.27V11h2.269V22h4.552V11h3.03l.4-3.791Z"
-                                            transform="translate(0)" fill="#fff" />
-                                    </g>
-                                </svg>
-                            </div>
-                            <div class="linkedin mx-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16.968" height="17.199"
-                                    viewBox="0 0 16.968 17.199">
-                                    <g id="linkedin-logo_1_" data-name="linkedin-logo (1)"
-                                        transform="translate(0 -9.558)">
-                                        <path id="LinkedIn"
-                                            d="M16.968,20.1v6.654H13.331V20.548c0-1.56-.526-2.624-1.842-2.624a2.006,2.006,0,0,0-1.866,1.411,2.789,2.789,0,0,0-.121.941v6.481H5.864s.049-10.515,0-11.6H9.5V16.8c-.007.012-.017.026-.024.037H9.5V16.8a3.586,3.586,0,0,1,3.278-1.918C15.173,14.879,16.968,16.538,16.968,20.1ZM2.059,9.558a1.949,1.949,0,0,0-2.059,2,1.938,1.938,0,0,0,2.01,2.006h.024a1.95,1.95,0,0,0,2.058-2.006A1.942,1.942,0,0,0,2.059,9.558ZM.216,26.757H3.853v-11.6H.216Z"
-                                            transform="translate(0)" fill="#fff" />
-                                    </g>
-                                </svg>
-                            </div>
-                        </div>
+                    <div class="icon-footer-div py-2">
+                        <img src="/static/logo_2.png" alt="">
+                        <div class="soc">
+                          
+                            <a href="#" class="icon facebook" title="Facebook">
+                              <svg viewBox="0 0 512 512">
+                                <path d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z"/>
+                              </svg><!--[if lt IE 9]><em>Facebook</em><![endif]-->
+                            </a>
+                          
+                            <a href="#" class="icon linkedin" title="LinkedIn">
+                              <svg viewBox="0 0 512 512">
+                                <path d="M186.4 142.4c0 19-15.3 34.5-34.2 34.5 -18.9 0-34.2-15.4-34.2-34.5 0-19 15.3-34.5 34.2-34.5C171.1 107.9 186.4 123.4 186.4 142.4zM181.4 201.3h-57.8V388.1h57.8V201.3zM273.8 201.3h-55.4V388.1h55.4c0 0 0-69.3 0-98 0-26.3 12.1-41.9 35.2-41.9 21.3 0 31.5 15 31.5 41.9 0 26.9 0 98 0 98h57.5c0 0 0-68.2 0-118.3 0-50-28.3-74.2-68-74.2 -39.6 0-56.3 30.9-56.3 30.9v-25.2H273.8z"/>
+                              </svg><!--[if lt IE 9]><em>LinkedIn</em><![endif]-->
+                            </a>                
+                          </div>
                     </div>
                 </div>
                 <!--Grid column-->
 
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="">Rechtliches</h5>
+                    <p style="font-weight: bold;">Rechtliches </p>
 
-                    <ul class="list-unstyled mb-0">
+                    <ul class="list-unstyled mb-0 footer-list">
                         <li>
-                            <a href="#!" class="text-white">Link 1</a>
+                            <a href="/rechtlich_html/erstinformation.html" class="text-white link-footer">Erstinformation</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 2</a>
+                            <a href="/rechtlich_html/impressum.html" class="text-white link-footer">Impressum</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 3</a>
+                            <a href="/rechtlich_html/datenschutz.html" class="text-white link-footer">Datenschutz</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 4</a>
+                            <a href="/rechtlich_html/transparenzverordnung.html" class="text-white link-footer">Transparenzverordnung</a>
+                        </li>
+                        <li>
+                            <a href="/rechtlich_html/legal.html" class="text-white link-footer">Legal</a>
                         </li>
                     </ul>
                 </div>
@@ -368,20 +374,20 @@
 
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="mb-0">Kontaktieren Sie uns</h5>
+                    <p style="font-weight: bold;">Kontaktieren Sie uns: </p>
 
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled footer-list">
                         <li>
-                            <a href="#!" class="text-white">Link 1</a>
+                            Straße
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 2</a>
+                            69181 Mannheim
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 3</a>
+                            Daniel Adamovic
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 4</a>
+                            medFinance
                         </li>
                     </ul>
                 </div>
@@ -390,8 +396,9 @@
             <!--Grid row-->
         </div>
         <!-- Grid container -->
+    </footer>
 
-
+    <!-- Footer -->
 
 </body>
 
@@ -419,6 +426,23 @@
         });
     });
 </script>
+<script>
+    function reveal() {
+      var reveals = document.querySelectorAll(".reveal");
+      for (var i = 0; i < reveals.length; i++) {
+        var windowHeight = window.innerHeight;
+        var elementTop = reveals[i].getBoundingClientRect().top;
+        var elementVisible = 150;
+        if (elementTop < windowHeight - elementVisible) {
+          reveals[i].classList.add("active");
+        } else {
+          reveals[i].classList.remove("active");
+        }
+      }
+    }
+  
+    window.addEventListener('scroll', reveal);
+  </script>
 
 <!-- Bootstrap JS  -->
 
