--- a/aerzte_apotheker.html
+++ b/aerzte_apotheker.html
@@ -45,7 +45,7 @@
                 </li>
                 <li class="nav-item px-2">
                     <!-- <a class="nav-link" href="#">Kontakt</a> -->
-                    <a class="nav-link px-4 nav-btn">Kontakt</a>
+                    <a href="/kontakt.html" class="nav-link px-4 nav-btn">Kontakt</a>
                 </li>
             </ul>
             <!-- Left links -->
@@ -227,9 +227,11 @@
                         <h5>Haben Sie Fragen oder wünschen Sie sich noch mehr Informationen?</h5>
                         <p class="p-text line-height">Dann vereinbaren Sie gleich einen Beratungstermin und lassen sich
                             zur Betrieblichen Altersvorsorge beraten.</p>
-                        <button class="btn mb-3"
-                            style="background-color:#610556; color: white; border-radius: 20px">Termin
-                            vereinbaren</button>
+                        <a href="/kontakt.html">
+                            <button class="btn mb-3"
+                                style="background-color:#610556; color: white; border-radius: 20px">Termin
+                                vereinbaren</button>
+                        </a>
                         <p class="p-text">Oder rufen sie Uns an:</p>
                         <p class="p-text" style="font-weight: bold; font-size:large">0176/7898543</p>
                     </div>
@@ -251,14 +253,16 @@
             <h2>Haben wir Ihr Interesse geweckt?</h2>
             <p class="p-text">Wenden Sie sich an uns, um mehr über die Gründung oder Übernahme einer Praxis zu erfahren.
                 Lassen Sie sich von uns dabei helfen, die beste Lösung für Sie zu finden.</p>
-            <button class="btn mb-3"
-                style="background-color:#610556; color: white; border-radius: 20px; width: auto;">Termin
-                vereinbaren</button>
+            <a href="/kontakt.html">
+                <button class="btn mb-3"
+                    style="background-color:#610556; color: white; border-radius: 20px; width: auto;">Termin
+                    vereinbaren</button>
+            </a>
         </div>
     </div>
 
-       <!-- Footer -->
-       <footer class="text-white text-center text-lg-start">
+    <!-- Footer -->
+    <footer class="text-white text-center text-lg-start">
         <!-- Grid container -->
         <div class="container p-4">
             <!--Grid row-->
@@ -268,19 +272,21 @@
                     <div class="icon-footer-div py-2">
                         <img src="/static/logo_2.png" alt="">
                         <div class="soc">
-                          
+
                             <a href="#" class="icon facebook" title="Facebook">
-                              <svg viewBox="0 0 512 512">
-                                <path d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z"/>
-                              </svg><!--[if lt IE 9]><em>Facebook</em><![endif]-->
+                                <svg viewBox="0 0 512 512">
+                                    <path
+                                        d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z" />
+                                </svg><!--[if lt IE 9]><em>Facebook</em><![endif]-->
                             </a>
-                          
+
                             <a href="#" class="icon linkedin" title="LinkedIn">
-                              <svg viewBox="0 0 512 512">
-                                <path d="M186.4 142.4c0 19-15.3 34.5-34.2 34.5 -18.9 0-34.2-15.4-34.2-34.5 0-19 15.3-34.5 34.2-34.5C171.1 107.9 186.4 123.4 186.4 142.4zM181.4 201.3h-57.8V388.1h57.8V201.3zM273.8 201.3h-55.4V388.1h55.4c0 0 0-69.3 0-98 0-26.3 12.1-41.9 35.2-41.9 21.3 0 31.5 15 31.5 41.9 0 26.9 0 98 0 98h57.5c0 0 0-68.2 0-118.3 0-50-28.3-74.2-68-74.2 -39.6 0-56.3 30.9-56.3 30.9v-25.2H273.8z"/>
-                              </svg><!--[if lt IE 9]><em>LinkedIn</em><![endif]-->
-                            </a>                
-                          </div>
+                                <svg viewBox="0 0 512 512">
+                                    <path
+                                        d="M186.4 142.4c0 19-15.3 34.5-34.2 34.5 -18.9 0-34.2-15.4-34.2-34.5 0-19 15.3-34.5 34.2-34.5C171.1 107.9 186.4 123.4 186.4 142.4zM181.4 201.3h-57.8V388.1h57.8V201.3zM273.8 201.3h-55.4V388.1h55.4c0 0 0-69.3 0-98 0-26.3 12.1-41.9 35.2-41.9 21.3 0 31.5 15 31.5 41.9 0 26.9 0 98 0 98h57.5c0 0 0-68.2 0-118.3 0-50-28.3-74.2-68-74.2 -39.6 0-56.3 30.9-56.3 30.9v-25.2H273.8z" />
+                                </svg><!--[if lt IE 9]><em>LinkedIn</em><![endif]-->
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!--Grid column-->
@@ -291,7 +297,8 @@
 
                     <ul class="list-unstyled mb-0 footer-list">
                         <li>
-                            <a href="/rechtlich_html/erstinformation.html" class="text-white link-footer">Erstinformation</a>
+                            <a href="/rechtlich_html/erstinformation.html"
+                                class="text-white link-footer">Erstinformation</a>
                         </li>
                         <li>
                             <a href="/rechtlich_html/impressum.html" class="text-white link-footer">Impressum</a>
@@ -300,7 +307,8 @@
                             <a href="/rechtlich_html/datenschutz.html" class="text-white link-footer">Datenschutz</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/transparenzverordnung.html" class="text-white link-footer">Transparenzverordnung</a>
+                            <a href="/rechtlich_html/transparenzverordnung.html"
+                                class="text-white link-footer">Transparenzverordnung</a>
                         </li>
                         <li>
                             <a href="/rechtlich_html/legal.html" class="text-white link-footer">Legal</a>
