--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </li>
                 <li class="nav-item px-2">
                     <!-- <a class="nav-link" href="#">Kontakt</a> -->
-                    <a class="nav-link px-4 nav-btn">Kontakt</a>
+                    <a href="/kontakt.html" class="nav-link px-4 nav-btn">Kontakt</a>
                 </li>
             </ul>
             <!-- Left links -->
@@ -299,12 +299,12 @@
                         Ansprüchen suchen wir Ihnen die geeigneteste Versicherungslösung aus.
                     </p>
                     <a href="/versicherung.html">
-                    <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-                        </svg></button></a>
+                        <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                            </svg></button></a>
 
                 </div>
             </div>
@@ -331,19 +331,21 @@
                     <div class="icon-footer-div py-2">
                         <img src="/static/logo_2.png" alt="">
                         <div class="soc">
-                          
+
                             <a href="#" class="icon facebook" title="Facebook">
-                              <svg viewBox="0 0 512 512">
-                                <path d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z"/>
-                              </svg><!--[if lt IE 9]><em>Facebook</em><![endif]-->
+                                <svg viewBox="0 0 512 512">
+                                    <path
+                                        d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z" />
+                                </svg><!--[if lt IE 9]><em>Facebook</em><![endif]-->
                             </a>
-                          
+
                             <a href="#" class="icon linkedin" title="LinkedIn">
-                              <svg viewBox="0 0 512 512">
-                                <path d="M186.4 142.4c0 19-15.3 34.5-34.2 34.5 -18.9 0-34.2-15.4-34.2-34.5 0-19 15.3-34.5 34.2-34.5C171.1 107.9 186.4 123.4 186.4 142.4zM181.4 201.3h-57.8V388.1h57.8V201.3zM273.8 201.3h-55.4V388.1h55.4c0 0 0-69.3 0-98 0-26.3 12.1-41.9 35.2-41.9 21.3 0 31.5 15 31.5 41.9 0 26.9 0 98 0 98h57.5c0 0 0-68.2 0-118.3 0-50-28.3-74.2-68-74.2 -39.6 0-56.3 30.9-56.3 30.9v-25.2H273.8z"/>
-                              </svg><!--[if lt IE 9]><em>LinkedIn</em><![endif]-->
-                            </a>                
-                          </div>
+                                <svg viewBox="0 0 512 512">
+                                    <path
+                                        d="M186.4 142.4c0 19-15.3 34.5-34.2 34.5 -18.9 0-34.2-15.4-34.2-34.5 0-19 15.3-34.5 34.2-34.5C171.1 107.9 186.4 123.4 186.4 142.4zM181.4 201.3h-57.8V388.1h57.8V201.3zM273.8 201.3h-55.4V388.1h55.4c0 0 0-69.3 0-98 0-26.3 12.1-41.9 35.2-41.9 21.3 0 31.5 15 31.5 41.9 0 26.9 0 98 0 98h57.5c0 0 0-68.2 0-118.3 0-50-28.3-74.2-68-74.2 -39.6 0-56.3 30.9-56.3 30.9v-25.2H273.8z" />
+                                </svg><!--[if lt IE 9]><em>LinkedIn</em><![endif]-->
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!--Grid column-->
@@ -354,7 +356,8 @@
 
                     <ul class="list-unstyled mb-0 footer-list">
                         <li>
-                            <a href="/rechtlich_html/erstinformation.html" class="text-white link-footer">Erstinformation</a>
+                            <a href="/rechtlich_html/erstinformation.html"
+                                class="text-white link-footer">Erstinformation</a>
                         </li>
                         <li>
                             <a href="/rechtlich_html/impressum.html" class="text-white link-footer">Impressum</a>
@@ -363,7 +366,8 @@
                             <a href="/rechtlich_html/datenschutz.html" class="text-white link-footer">Datenschutz</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/transparenzverordnung.html" class="text-white link-footer">Transparenzverordnung</a>
+                            <a href="/rechtlich_html/transparenzverordnung.html"
+                                class="text-white link-footer">Transparenzverordnung</a>
                         </li>
                         <li>
                             <a href="/rechtlich_html/legal.html" class="text-white link-footer">Legal</a>
@@ -428,21 +432,21 @@
 </script>
 <script>
     function reveal() {
-      var reveals = document.querySelectorAll(".reveal");
-      for (var i = 0; i < reveals.length; i++) {
-        var windowHeight = window.innerHeight;
-        var elementTop = reveals[i].getBoundingClientRect().top;
-        var elementVisible = 150;
-        if (elementTop < windowHeight - elementVisible) {
-          reveals[i].classList.add("active");
-        } else {
-          reveals[i].classList.remove("active");
+        var reveals = document.querySelectorAll(".reveal");
+        for (var i = 0; i < reveals.length; i++) {
+            var windowHeight = window.innerHeight;
+            var elementTop = reveals[i].getBoundingClientRect().top;
+            var elementVisible = 150;
+            if (elementTop < windowHeight - elementVisible) {
+                reveals[i].classList.add("active");
+            } else {
+                reveals[i].classList.remove("active");
+            }
         }
-      }
     }
-  
+
     window.addEventListener('scroll', reveal);
-  </script>
+</script>
 
 <!-- Bootstrap JS  -->
 
