--- a/kontakt.html
+++ b/kontakt.html
@@ -63,6 +63,7 @@
     </div>
     <div class="container my-5">
         <div class="row bg-beige p-5">
+            <h2>Kontaktformular</h2>
             <form id="contact-form" method="post" action="contact.php" role="form">
 
                 <div class="messages"></div>
@@ -72,18 +73,18 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="form_name">Firstname *</label>
+                                <label for="form_name">Vorname *</label>
                                 <input id="form_name" type="text" name="name" class="form-control"
-                                    placeholder="Please enter your firstname *" required="required"
+                                    placeholder="" required="required"
                                     data-error="Firstname is required.">
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="form_lastname">Lastname *</label>
+                                <label for="form_lastname">Nachname *</label>
                                 <input id="form_lastname" type="text" name="surname" class="form-control"
-                                    placeholder="Please enter your lastname *" required="required"
+                                    placeholder="" required="required"
                                     data-error="Lastname is required.">
                                 <div class="help-block with-errors"></div>
                             </div>
@@ -94,21 +95,23 @@
                             <div class="form-group">
                                 <label for="form_email">Email *</label>
                                 <input id="form_email" type="email" name="email" class="form-control"
-                                    placeholder="Please enter your email *" required="required"
+                                    placeholder="" required="required"
                                     data-error="Valid email is required.">
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="form_need">Please specify your need *</label>
+                                <label for="form_need">Ihr Betreff: *</label>
                                 <select id="form_need" name="need" class="form-control" required="required"
-                                    data-error="Please specify your need.">
-                                    <option value=""></option>
-                                    <option value="Request quotation">Request quotation</option>
-                                    <option value="Request order status">Request order status</option>
-                                    <option value="Request copy of an invoice">Request copy of an invoice</option>
-                                    <option value="Other">Other</option>
+                                    data-error="Bitte Option wählen.">
+                                    <option value="">-</option>
+                                    <option value="Request altersversorgung">Betriebliche Altersversorgung</option>
+                                    <option value="Request arzte-u-apotheker">Finanzberatung für Mediziner u. Ärzte</option>
+                                    <option value="Request vermoegensmanagement">Vermögensmanagement</option>
+                                    <option value="Request finanzierung">Finanzierung</option>
+                                    <option value="Request versicherung">Versicherung</option>
+                                    <option value="sonstiges">Sonstiges</option>
                                 </select>
                                 <div class="help-block with-errors"></div>
                             </div>
@@ -117,9 +120,9 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="form_message">Message *</label>
+                                <label for="form_message">Ihre Nachricht *</label>
                                 <textarea id="form_message" name="message" class="form-control"
-                                    placeholder="Message for me *" rows="4" required="required"
+                                    placeholder="" rows="4" required="required"
                                     data-error="Please, leave us a message."></textarea>
                                 <div class="help-block with-errors"></div>
                             </div>
@@ -131,15 +134,17 @@
                     <div class="row">
                         <div class="col-md-12">
                             <p class="text-muted">
-                                <strong>*</strong> These fields are required. Contact form template by
-                                <a href="https://bootstrapious.com/p/how-to-build-a-working-bootstrap-contact-form"
-                                    target="_blank">Bootstrapious</a>.
+                                <strong>*</strong> Diese Felder sind erforderlich.
                             </p>
                         </div>
                     </div>
                 </div>
 
             </form>
+            <h3>Oder rufen Sie uns einfach an!</h3>
+            <p class = "p-text"> Gerne Sind wir für Sie auch telefonisch erreichbar.</p>
+            <p class="p-text" style="font-weight: bold; font-size:large">0800 / 789 85 43</p>
+            <p class="p-text"> (Mo - Fr: 08:00 - 18:00 Uhr)</p>
         </div>
     </div>
 
